--- a/staytuned-cordova-sdk-demo/src/index.css
+++ b/staytuned-cordova-sdk-demo/src/index.css
@@ -1,13 +1,133 @@
+/* --------------   LAYOUT  ---------------- */
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /* --staytuned-main-color: #ab3727; */
+  /* --staytuned-content-caption-color: pink;
+  --staytuned-content-title-color: blue;
+  --staytuned-element-title-color: green;
+  --staytuned-track-collection-title-color: green;
+  --staytuned-text-color: orange;
+  --staytuned-font-family: 'Comic Sans MS'; */
+  padding-top: 65px; /* header fixed */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body.staytuned-player-opened {
+  padding-bottom: 100px;
 }
+
+h1,
+h2 {
+  margin: 0;
+  text-align: center;
+  font-family: Avenir Next;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 33px;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+/* Fade */
+
+.fade-enter,
+.fade-exit {
+  position: absolute;
+  width: 100%;
+}
+
+.fade-enter {
+  opacity: 0;
+  z-index: 1;
+}
+
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transition: opacity 350ms ease-in;
+}
+
+.fade-exit {
+  opacity: 1;
+}
+
+.fade-exit.fade-exit-active {
+  opacity: 0;
+  transition: opacity 350ms ease-in;
+}
+
+/* --------------   HEADER  ---------------- */
+
+header {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: white;
+  height: 65px;
+  display: flex;
+  align-items: center;
+  padding: 0 1em;
+  justify-content: center;
+}
+
+header::after {
+  /* applying a simple border-bottom on <header> causes
+  a weird offset of 1px in chrome */
+  content: '';
+  position: absolute;
+  display: block;
+  height: 1px;
+  width: 100%;
+  left: 0;
+  bottom: -1px;
+  background: grey;
+}
+
+header h1 {
+  width: 50%;
+  margin: 0;
+}
+
+header div {
+  width: 25%;
+}
+
+header.header--empty {
+  padding: 0;
+}
+
+.svg-icon path {
+  fill: rgb(61, 61, 61);
+}
+
+.close-btn {
+  width: 1.8em;
+  height: 1.8em;
+}
+
+.social-media svg {
+  width: 1.2em;
+  height: 1.2em;
+  padding: 0 0.5em;
+}
+
+/* -----------  PODCAST LIST ("home") --------- */
+
+.widgets h2 {
+  margin: 1em;
+}
+
+.widget-container {
+  width: 300px;
+  height: 400px;
+  margin: 1.5em auto;
+  overflow: hidden;
+}
+
+/* --------------   PODCAST  ---------------- */
+
+/* --------------   EPISODE  ---------------- */
