--- a/react-cordova/src/App.css
+++ b/react-cordova/src/App.css
@@ -26,11 +26,11 @@
 }
 
 .App-header {
-    background-color: #282c34;
+    background-color: #eee;
     display: flex;
     flex-direction: column;
     font-size: calc(10px + 2vmin);
-    color: white;
+    color: black;
     flex: 1;
     overflow: scroll;
 }
